checker/src/operation_checker/tests/snapshots/nitrogql__checker__operation_checker__tests__fragments__inline_fragment_without_condition.snap
---
source: src/checker/operation_checker/tests/mod.rs
expression: "check_operation_document(&schema, &doc)"
---
[
    CheckError {
        position: Pos {
            line: 8,
            column: 20,
            file: 0,
            builtin: false,
        },
        message: FieldNotFound {
            field_name: "something",
            type_name: "User",
        },
        additional_info: [
            (
                Pos {
                    line: 12,
                    column: 12,
                    file: 0,
                    builtin: false,
                },
                DefinitionPos {
                    name: "User",
                },
            ),
        ],
    },
]
